<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:background="@drawable/background_rounded"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/select_player_title"
            android:layout_margin="30dp"
            android:text="Select Player"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_alignParentRight="true"
            android:textSize="@dimen/select_player_title"
            android:layout_margin="30dp"
            android:text="OK"
            android:id="@+id/ok"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear_mx_player"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mx_player"/>
            <TextView
                android:id="@+id/textview_mx_player"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mx_player"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear_vlc_player"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vlc_player"/>
            <TextView
                android:id="@+id/textview_vlc_player"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vlc_player"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear_321_player"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/three_twenty_one_player"/>
            <TextView
                android:id="@+id/textview_321_player"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_twenty_one_player"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear_localcast_player"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/local_cast"/>
            <TextView
                android:id="@+id/textview_localcast_player"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_cast_player"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear_default_player"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/video_player"/>
            <TextView
                android:id="@+id/textview_default_player"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_player"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/borderRadius"
            android:id="@+id/linear3"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
   <!-- <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView_playerlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/btnOk"/>-->
</LinearLayout>
</LinearLayout>